# transitions_poc

./: .gitignore  pyproject.toml
apps/common/: models.py
apps/order/: admin.py  apps.py  signals.py
apps/order/migrations/: 0001_initial.py  0002_alter_order_snapshot.py  0003_alter_order_snapshot.py  0004_alter_order_snapshot.py  0005_order_ready_to_customer.py
apps/order/models/: __init__.py  order.py  orderline.py
apps/product/: admin.py  apps.py
apps/product/fixtures/: product.fixture.json  producttype.fixture.json
apps/product/migrations/: 0001_initial.py
apps/product/models/: __init__.py  product.py  product_type.py
apps/status_machine/: admin.py  apps.py  constants.py  state_machines.py
apps/status_machine/fixtures/: orderstatus.fixture.json
apps/status_machine/migrations/: 0001_initial.py  0002_alter_orderstatus_options.py
apps/status_machine/models/: __init__.py  status.py
apps/status_machine/services/: __init__.py  status_machine.py
apps/status_machine/validations/: order_status_machine_transition_validations.py
config/: settings.py
tests/apps/order/: test_order_transitions.py
tests/apps/order/models/: test_order.py  test_orderline.py
tests/factories/: order.py  orderline.py  product.py
